# MolR

./: .gitignore  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  doc.mustache  docker-compose.yml
molr/: data_processing.py  interface.py
notebooks/: convert_pickle_files_to_safe_format.ipynb  embed_dataset_example.ipynb  embedder_class_and_speed_test.ipynb  kmeans.ipynb  preprocess.py  test_lancedb.ipynb  test_milvus.ipynb  test_speed.ipynb
src/: interface.py
src/molr/: data_processing.py  featurizer.py  interface.py  train.py
src/molr/ged_pred/: gp_data_processing.py  gp_train.py
src/molr/property_pred/: pp_data_processing.py  pp_train.py
src/molr/visualization/: visualize.py
src/molr/weights/gat_1024/: hparams.yml
src/molr/weights/gcn_1024/: feature_enc.yml  hparams.yml
src/molr/weights/sage_1024/: hparams.yml
src/molr/weights/tag_1024/: hparams.yml
src/property_pred/: pp_data_processing.py
