[tool.poetry]
name = "MolR"
version = "0.1.0"
description = "Implementation of the MolR embedding model"
authors = ["Hongwei Wang et al."]
packages = [
    { include = "molr" }
]
# include = ["saved/*"]

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
torch = "2.2.2"
matplotlib = "*"
scikit-learn = "*"
pysmiles = "*"
networkx = "2.*,<2.9"
scipy = "*"
cython = "^3.0.11"
datasets = "<3.0.0" # for compatibility with molpredictors
pyarrow = "14.*"  # for compatibility with darwin_molecules
dill = "0.3.6" # for compatibility with darwin_molecules
rdkit-pypi = "*"
#dgl = [
#    {path = "thirdparty/dgl/dist/dgl-2.5-cp39-cp39-linux_x86_64.whl", python = "3.9"},
#    {version = "*", python = ">3.9"},    
#]

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
ruff = "^0.1.3"

[tool.ruff]
line-length = 90
target-version = "py39"
extend-exclude = [
    "playground",
    "__pycache__"
]
src = ["molr", "tests"]
output-format = "grouped"
show-fixes = true

[tool.ruff.lint]
extend-select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    # "PL",  # pylint
    # "I",  # isort
    # "N",  # pep8-naming
    # "C",  # flake8-comprehensions
    # "B",  # flake8-bugbear
    # "UP",  # pyupgrade
    # "RUF",  # ruff-specific rules
    "NPY",  # numpy-specific rules
    # "PD",  # pandas-vet
]
ignore-init-module-imports = true

[tool.ruff.isort]
known-first-party = ["molr", "tests"]
known-third-party = [
    "darwin",
    "mordred_darwin",
    "pharmacophore_py_alpha",
    "rdkit_darwin",
]
lines-after-imports = 2

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.mypy]
python_version = "3.9"
files = [
    "molr",
    "tests",
]
show_column_numbers = true
strict_optional = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
warn_unreachable = true
disable_error_code = [
    "annotation-unchecked"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
filterwarnings = [
    "ignore::DeprecationWarning:werkzeug.*:",
    "ignore::DeprecationWarning:flask.*:"
]
addopts = [
    "--durations=20",
    "--strict-config",
    "--cov-report=term-missing:skip-covered",
    "--cov-fail-under=80",
    "--no-cov-on-fail",
    "--disable-warnings"  # experimental
]
xfail_strict = true
norecursedirs = [
    ".*",
    "*.egg-info",
    "build",
    "dist",
    "development",
    "__pycache__"
]

[tool.coverage.run]
relative_files = true
# omit = []

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'raise NotImplementedError',
    'if TYPE_CHECKING:',
    '@overload',
    '@abstract',
    'if __name__ == .__main__.:'
]

[tool.coverage.html]
directory = 'coverage_html_report'
